[package]
name = "debug-span"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = { version = "1", features = ["span-locations"] }

[dev-dependencies]
syn = "2"
insta = "1"
unindent = "0.2"
